{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 81,
  "lineage": "2267ccda-1404-e8c2-fd98-c1b87e7a110d",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0aba19e56f3eaec05",
            "arn": "arn:aws:ec2:eu-north-1:938998270170:instance/i-0d983fa49882c4774",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d983fa49882c4774",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "k8s-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04f3fd59b4b7a453e"
              }
            ],
            "primary_network_interface_id": "eni-04f3fd59b4b7a453e",
            "private_dns": "ip-10-0-1-220.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.220",
            "public_dns": "ec2-51-21-255-221.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.255.221",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03038fcc63d997106",
                "volume_size": 12,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005112b54d96039c2",
            "tags": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e672b61c120b277d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "i-0d983fa49882c4774",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.my-sg",
            "module.vpc.aws_subnet.main-subnet",
            "module.vpc.aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0aba19e56f3eaec05",
            "arn": "arn:aws:ec2:eu-north-1:938998270170:instance/i-01100fc7320b4bca4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01100fc7320b4bca4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "k8s-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0919408048f8cb9ab"
              }
            ],
            "primary_network_interface_id": "eni-0919408048f8cb9ab",
            "private_dns": "ip-10-0-1-197.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.197",
            "public_dns": "ec2-13-61-152-30.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.152.30",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-076e005ac50ffff26",
                "volume_size": 12,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005112b54d96039c2",
            "tags": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e672b61c120b277d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "i-01100fc7320b4bca4",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.my-sg",
            "module.vpc.aws_subnet.main-subnet",
            "module.vpc.aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0aba19e56f3eaec05",
            "arn": "arn:aws:ec2:eu-north-1:938998270170:instance/i-02b30aa65e5eba898",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b30aa65e5eba898",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "k8s-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04b6e9747ac60b704"
              }
            ],
            "primary_network_interface_id": "eni-04b6e9747ac60b704",
            "private_dns": "ip-10-0-1-218.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.218",
            "public_dns": "ec2-13-62-228-101.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.62.228.101",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-076923506d35f4187",
                "volume_size": 12,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005112b54d96039c2",
            "tags": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e672b61c120b277d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "i-02b30aa65e5eba898",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.my-sg",
            "module.vpc.aws_subnet.main-subnet",
            "module.vpc.aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0aba19e56f3eaec05",
            "arn": "arn:aws:ec2:eu-north-1:938998270170:instance/i-0a9e60aa82bdd07ce",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9e60aa82bdd07ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "k8s-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0334269415e3a7d8a"
              }
            ],
            "primary_network_interface_id": "eni-0334269415e3a7d8a",
            "private_dns": "ip-10-0-1-109.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.109",
            "public_dns": "ec2-13-60-9-61.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.9.61",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0713fff40ef44768f",
                "volume_size": 12,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005112b54d96039c2",
            "tags": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e672b61c120b277d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "i-0a9e60aa82bdd07ce",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.my-sg",
            "module.vpc.aws_subnet.main-subnet",
            "module.vpc.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:938998270170:security-group/sg-0e672b61c120b277d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e672b61c120b277d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terra-week-dev",
            "name_prefix": "",
            "owner_id": "938998270170",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0468d9fa3063a1131"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "sg-0e672b61c120b277d",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:938998270170:internet-gateway/igw-04c9d263ed98d4e4d",
            "id": "igw-04c9d263ed98d4e4d",
            "owner_id": "938998270170",
            "region": "eu-north-1",
            "tags": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            },
            "vpc_id": "vpc-0468d9fa3063a1131"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "igw-04c9d263ed98d4e4d",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:938998270170:route-table/rtb-0c48e4cf49cc89028",
            "id": "rtb-0c48e4cf49cc89028",
            "owner_id": "938998270170",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c9d263ed98d4e4d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0468d9fa3063a1131"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "rtb-0c48e4cf49cc89028",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main-ig",
            "module.vpc.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa1f802e7c9a1527",
            "region": "eu-north-1",
            "route_table_id": "rtb-0c48e4cf49cc89028",
            "subnet_id": "subnet-005112b54d96039c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "rtbassoc-0aa1f802e7c9a1527",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main-ig",
            "module.vpc.aws_route_table.main-table",
            "module.vpc.aws_subnet.main-subnet",
            "module.vpc.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:938998270170:subnet/subnet-005112b54d96039c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005112b54d96039c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "938998270170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            },
            "vpc_id": "vpc-0468d9fa3063a1131"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "subnet-005112b54d96039c2",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:938998270170:vpc/vpc-0468d9fa3063a1131",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-059d194d21d21defc",
            "default_route_table_id": "rtb-0f2b364febbf52650",
            "default_security_group_id": "sg-009fa7a4446e4ed17",
            "dhcp_options_id": "dopt-02f336034527832b0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0468d9fa3063a1131",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2b364febbf52650",
            "owner_id": "938998270170",
            "region": "eu-north-1",
            "tags": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "terra-week-dev"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "vpc-0468d9fa3063a1131",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}